--- a/files/home.css
+++ b/files/home.css
@@ -32,16 +32,16 @@ body {
     overflow: hidden;
 }
 .column.previews .preview {
-    /* height: 500px; */
-    /* max-width: 250px; */
-    /* margin: 10px; */
-    animation: up 0.5s ease-out;
+    height: 500px;
+    max-width: 250px;
+    margin: 10px;
+    /* animation: up 0.5s ease-out; */
 }
 .column.previews .preview img.frame {
     position: relative;
     top: 0;
-    /* height: 100%; */
-    width: 330px
+    height: 100%;
+    /* width: 330px */
     
 }
 .column.previews .preview img.screenshot {
