--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,13 @@ body {
 a {
     color: white;
 }
-h1 {
+h1,h2 {
     color: white;
+}
+h1 {
     font-style: italic;
-}
-h2,h3,h4 {
-    color: #060c22;
 
 }
-
 p {
     color: #FFFFFF;
 }
@@ -58,11 +56,11 @@ h1.increase {
   cursor: pointer;
   background-color: #f82249;
 }
-.block{
-  width: auto;
+.box{
+  width: 400px;
   height: auto;
-  padding: 20px;
-  text-align: center;
+  padding: 5px;
+  background-color: rgba(6, 12, 34, 0.76);
 }
 
 .main-container {
@@ -378,6 +376,29 @@ p {
   width: 100%;
 }
 
+.nav-menu li.buy-tickets a {
+  color: #fff;
+  background: #f82249;
+  padding: 7px 22px;
+  border-radius: 50px;
+  border: 2px solid #f82249;
+  transition: all ease-in-out 0.3s;
+  font-weight: 500;
+  margin-left: 8px;
+  margin-top: 2px;
+  line-height: 1;
+  font-size: 13px;
+}
+
+.nav-menu li.buy-tickets a:hover {
+  background: none;
+}
+
+.nav-menu li.buy-tickets:hover a:before,
+.nav-menu li.buy-tickets.menu-active a:before {
+  visibility: hidden;
+}
+
 .nav-menu ul {
   margin: 4px 0 0 0;
   padding: 10px;
@@ -523,7 +544,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #about {
-  height: auto;
+  height: 300px;
   background: url("../img/about-bg.jpg");
   background-size: cover;
   overflow: hidden;
@@ -581,10 +602,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: rgba(6, 12, 34, 0.76);
   position: absolute;
   left: 0;
-  bottom: ;
+  bottom: -30px;
   right: 0;
   text-align: center;
   padding-top: 10px;
+  transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 #speakers .speaker .details h3 {
@@ -991,15 +1013,15 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #footer {
-  background-color: #060c22;
+  background: #101522;
   padding: 0 0 25px 0;
   color: #eee;
   font-size: 14px;
 }
 
 #footer .footer-top {
-  background: linear-gradient(to bottom, #192D44 0%, #192D44 100%);
-  padding: 40px 0 30px 0;
+  background: #040919;
+  padding: 60px 0 30px 0;
 }
 
 #footer .footer-top .footer-info {
@@ -1127,7 +1149,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #footer .copyright {
   text-align: center;
-  padding-top: 10px;
+  padding-top: 30px;
 }
 
 #footer .credits {
@@ -1179,7 +1201,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 1199px) {
   #header .container {
     max-width: 100%;
   }
